--- a/foodchart.html
+++ b/foodchart.html
@@ -118,7 +118,11 @@
 		   <h5> BREAKFAST :</h5>
 			   <p><img src="images/dot.png" height="10px" width="10px" style="margin:10px 10px;">3 Pic Parota,Dal & vagi,Halua,Fried Egg </p>
 		  <h5> Lunch :</h5>  
-		  	   <p><img src="images/dot.png" height="10px" width="10px" style="margin:10px 10px;">3 Pic Parota,Dal & vagi,Halua,Fried Egg </p>
+			 <p><img src="images/dot.png" height="10px" width="10px" style="margin:10px 10px;">3 Pic Parota,Dal & vagi,Halua,Fried Egg </p>
+			 <p>Chose One : </p>
+            <input type="radio" name="who" value="self"/>Chicken 
+        <br>     
+		<input type="radio" name="who" value="manager"/>Beef
 		  <h5> Dinner :</h5>  
 		  	   <p><img src="images/dot.png" height="10px" width="10px" style="margin:10px 10px;">3 Pic Parota,Dal & vagi,Halua,Fried Egg </p>	   
 
