--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       
     </ul>
   
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="background-color:#28A745;color:white;"><i class="fa fa-user-o" aria-hidden="true" style="padding-right:10px;color:white;"></i>Log In</button>
+    <a href="log.html">  <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="background-color:#28A745;color:white;"><i class="fa fa-user-o" aria-hidden="true" style="padding-right:10px;color:white;"></i>Log In</button></a>
     
 	  </div>
 	</nav>
