--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <!-- Header Section End -->
 	
 	<div class="headline">
-	<h1 style="color:#f5f5f5;font-size:160px; margin-left:100px;padding-top:-70px;">M E A L </h1>
+	<h1 style="color:rgba(166,166,166,0.4);font-size:160px; margin-left:100px;padding-top:-70px;">M E A L </h1>
 	
 	
 	</div>
