--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 	
 	</div>
 	<div class="col-md-6">
-	<img src="images/Download-app.png" style="margin-top:85px;">
+	<img src="images/Download-app.jpg" style="margin-top:85px;">
 	
 	</div>
 	
